# dendrite

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/dendrite-core/: Cargo.toml
crates/dendrite-core/src/: cache.rs  config.rs  graph.rs  identity.rs  lib.rs  line_map.rs  model.rs  parser.rs  store.rs  strategy.rs  trie.rs  utils.rs  vfs.rs  workspace.rs
crates/dendrite-core/src/analysis/: audit.rs  mod.rs
crates/dendrite-core/src/hierarchy/: dendron.rs  mod.rs
crates/dendrite-core/src/identity/: mod.rs
crates/dendrite-core/src/mutation/: hierarchy.rs  mod.rs  model.rs  split.rs  structural.rs
crates/dendrite-core/src/refactor/: audit.rs  hierarchy.rs  mod.rs  model.rs  rename.rs  split.rs  structural.rs
crates/dendrite-core/src/semantic/: dendron.rs  mod.rs
crates/dendrite-core/src/syntax/: dendron.rs  mod.rs
crates/dendrite-core/src/utils/: id.rs  mod.rs  time.rs
crates/dendrite-core/src/workspace/: assembler.rs  cache_tests.rs  edit_api.rs  engine.rs  file_ops.rs  hierarchy.rs  indexer.rs  mod.rs  multi_vault_tests.rs  mutation_api.rs  mutations.rs  note_tree.rs  queries.rs  refactor_api.rs  sync_ops.rs  tests.rs  vault.rs  vfs.rs
crates/dendrite-lsp/: Cargo.toml
crates/dendrite-lsp/src/: cache_manager.rs  config.rs  conversion.rs  lib.rs  protocol.rs  state.rs  tests.rs
crates/dendrite-lsp/src/handlers/: analysis.rs  completion.rs  configuration.rs  edit.rs  hierarchy.rs  lifecycle.rs  lookup.rs  metadata.rs  mod.rs  mutation.rs  navigation.rs  notifications.rs  query.rs  refactor.rs  rename.rs  semantic_tokens.rs  undo.rs
design/: architecture.md  concepts.md  implementation.md
docs/: configuration.md
scripts/: build_server.ps1  build_server.sh  sync_version.js
(+15 files in other folders)
