[package]
name = "dendrite-core"
version.workspace = true
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
pulldown-cmark = "0.13"
walkdir = "2.4"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
sha2 = "0.10"
nanoid = "0.4.0"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.8"