[package]
name = "dendrite-lsp"
version.workspace = true
edition = "2021"

[[bin]]
name = "dendrite"
path = "src/bin/dendrite.rs"

[dependencies]
dendrite-core = { path = "../dendrite-core" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.10"